--- a/style2.css
+++ b/style2.css
@@ -2,35 +2,35 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Arial;
+    font-family: Arial, sans-serif;
 }
 
 body {
-    background-color: rgb(218, 213, 213);
+    background: linear-gradient(45deg, #767575, #79f279, #5454eb);
+    background-size: 400% 400%;
+    animation: gradientAnimation 15s ease infinite;
     display: flex;
     min-height: 100vh;
     align-items: center;
     justify-content: center;
-    flex-direction: column;
     color: white;
 }
 
+@keyframes gradientAnimation {
+    0% { background-position: 0% 50%; }
+    50% { background-position: 100% 50%; }
+    100% { background-position: 0% 50%; }
+}
+
 canvas {
-    background-color: rgb(247, 167, 20);
+    background-color: rgba(0, 0, 0, 0.7);
 }
 
 .score {
-    display: white;
+    display: flex;
     flex-direction: column;
     align-items: center;
     font-size: 1.8rem;
-}
-
-.score--value {
-    font-weight: 700;
-    font-size: 5;
-    display: block;
-    margin-top: -10px;
 }
 
 .menu-screen {
@@ -41,28 +41,14 @@ canvas {
     z-index: 1;
 }
 
-.game-over {
-    text-transform: uppercase;
-    font-weight: 700;
-    font-size: 3rem;
-}
-
-.final-score {
-    font-weight: 500;
-    font-size: 1.5rem;
-}
-
 .btn-play {
     border: none;
     border-radius: 100px;
-    padding: 10px 15px 10px 12px;
+    padding: 10px 15px;
     font-size: 1rem;
     font-weight: 600;
     color: red;
     margin-top: 40px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 5px;
     cursor: pointer;
 }
+
